/*
 * $Id: ChangeLog,v 1.448 2002/10/17 00:48:05 ronpinkas Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2002-10-16 21:40 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * include/hbexpra.c
  * include/hbexprb.c
    ! Fixed long standing TODO: Move Function optimizations from hb_compExprNewFunCall() to hb_compExprUseFunCall()
      /* This fixed few GPFs resulting from recent optimizations. */

2002-10-16 17:47 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * include/hbexpra.c
    + Added reduction with HB_EA_REDUCE to paramas of functions optimized in hb_compExprNewFunCall().
    ! Fixed compile time optimization of Upper() to support embeded NULL characters in the string.

  * include/hbexprb.c
    + Added compile time optimization of SubStr( "Some Literal", litralNum, literalNum or NIL )

  * source/compiler/harbour.slx
    - Removed few commented lines.

  * source/rtl/minmax.c
    ! Corrected support for Date compared with Non Date in Max() and Min()

  * source/rtl/round.c
    * Reverted recent change to Int()

  * source/vm/macro.c
    ! Corrected call to hb_memvarGetStrValuePtr() to support new optimization of hb_memvarFindSymbol()

  * source/vm/memvars.c
    * Minor correction to trace message.

2002-10-16 12:40 UTC+0700 Andi Jahja <andijahja@harbour-id.net>
  * source/rtl/dircmd.prg
    ! modified output format in function PutNormal()
      previously: pp.exe - dir *.dbf -> test   .db
             now: pp.exe - dir *.dbf -> test.dbf

2002-10-15 21:18 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * source/pp/ppcore.c
    ! Fixed handling of string delimiters after keyword return in NextName()

2002-10-15 18:17 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * bin/bld.bat
    - Removed refernce to RDDADS.lib and Ace32.lib.

  * source/rtl/round.c
    * Changed Int() to return a long insread of double.
